--- a/labs/w07_OSM.ipynb
+++ b/labs/w07_OSM.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "## What is OpenStreetMap?\n",
     "\n",
-    "OpenStreetMap is a free and open map service. It is a collaborative global effort to collect free and open geodata. *Source: [wiki.openstreetmap.org](https://wiki.openstreetmap.org/wiki/Logos)*. OpenStreetMap (OSM) is a global collaborative (crowd-sourced) database and project that aims at creating a free editable map of the world containing of information about our environment. It contains data about streets, buildings,different services, and landuse, to mention just a few.\n",
+    "OpenStreetMap is a free and open map service. It is a collaborative global effort to collect free and open geodata. *Source: [wiki.openstreetmap.org](https://wiki.openstreetmap.org/wiki/Logos)*. OpenStreetMap (OSM) is a global collaborative (crowd-sourced) database and project that aims at creating a free editable map of the world containing of information about our environment. It contains data about streets, buildings, different services, and landuse, to mention just a few.\n",
     "\n",
     "OSM has more than 8 million registered users who contribute around 4 million changes daily.  Its database contains data that is described by [more than 7 billion nodes](http://wiki.openstreetmap.org/wiki/Stats) (that make up lines, polygons and other objects). While the most well-known side of OpenStreetMap is the map itself, the project is much more than that. OSM’s data can be used for many other purposes such as **routing**, **geocoding**, **education**, and **research**. OSM is also widely used for humanitarian response, e.g., in crisis areas (e.g. after natural disasters) and for fostering economic development. Read more about humanitarian projects that use OSM data from the [Humanitarian OpenStreetMap Team (HOTOSM) website](https://www.hotosm.org).\n",
     "\n",
@@ -193,11 +193,11 @@
    "source": [
     "### Download and model Street Networks\n",
     "\n",
-    "The [`osmnx.graph`module](https://osmnx.readthedocs.io/en/stable/osmnx.html#module-osmnx.graph) downloads data to construct a routable road network graph, based on an user-defined area of interest. This area of interest can be specified, for instance, using a place name, a bounding box, or a polygon. In the place name query, OSMnx uses the Nominatim Geocoding API. This means that place names should exist in the OpenStreetMap database (run a test search at [openstreetmap.org](https://www.openstreetmap.org/) or [nominatim.openstreetmap.org](https://nominatim.openstreetmap.org/ui/search.html)). `OSMnx`, amongst its several functionalities, lets you analyise, plot, and export the network in different file formats. The downloaded street networks are by default **directed** and preserve one-way directionality. For a more in-depth demonstration of creating street networks, see [this notebook](03-graph-place-queries.ipynb).\n",
+    "The [`osmnx.graph`module](https://osmnx.readthedocs.io/en/stable/osmnx.html#module-osmnx.graph) downloads data to construct a routable road network graph, based on an user-defined area of interest. This area of interest can be specified, for instance, using a place name, a bounding box, or a polygon. In the place name query, OSMnx uses the Nominatim Geocoding API. This means that place names should exist in the OpenStreetMap database (run a test search at [openstreetmap.org](https://www.openstreetmap.org/) or [nominatim.openstreetmap.org](https://nominatim.openstreetmap.org/ui/search.html)). `OSMnx`, amongst its several functionalities, lets you analyse, plot, and export the network in different file formats. The downloaded street networks are by default **directed** and preserve one-way directionality. For a more in-depth demonstration of creating street networks, see [this notebook](03-graph-place-queries.ipynb).\n",
     "\n",
     "You can download a street network by providing OSMnx any of the following (demonstrated in the examples below):\n",
     "  - a bounding box\n",
-    "  - a lat-long point plus a distance\n",
+    "  - a lat-lon point plus a distance\n",
     "  - an address plus a distance\n",
     "  - a place name or list of place names (to automatically geocode and get the boundary of)\n",
     "  - a polygon of the desired street network's boundaries\n",
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Method #2: Passing a lat-lng point and bounding box distance in meters\n",
+    "#### Method #2: Passing a lat-lon point and bounding box distance in meters\n",
     "This creates a bounding box *n* meters North, South, East, and West of the point, then constructs the network from all the OSM nodes and ways within the bounding box. [Here's a useful tool for defining bboxes](https://bboxfinder.com)"
    ]
   },
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Method #3: Passing a lat-lng point and *network* distance in meters\n",
+    "#### Method #3: Passing a lat-lon point and *network* distance in meters\n",
     "\n",
     "This creates a bounding box *n* meters North, South, East, and West of the point, then constructs the network from all the OSM nodes and ways within the bounding box. Then it truncates the network by removing all nodes further than *n* meters from the point along the network."
    ]
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Note* the plot above shows the network within 750m (traveling distance along the network) from the `location_point`. By default, the `network_type` parameter value is `all`, meaning that we do not filter out paths that restrict certain types of traffic. This also means that one-way streets are honored as one-way and you cannot travel the wrong direction down them. Thus, the 750m takes into account only those nodes you can reach within 500m while only traveling in the allowed direction of the street. Instead (below), we can specify `network_type='walk'` to build a street network only of paths that walking is allowed on. This also makes every path bi-directional in the directed network, because you can walk in either direction on the sidewalk of a one-way street. Thus, the 750m now takes into account those nodes you can reach within 750m while traveling in either direction (even if it's a one-way street)."
+    "*Note* the plot above shows the network within 750m (traveling distance along the network) from the `location_point`. By default, the `network_type` parameter value is `all`, meaning that we do not filter out paths that restrict certain types of traffic. This also means that one-way streets are honored as one-way and you cannot travel the wrong direction down them. Thus, the 750m takes into account only those nodes you can reach within 500m while only traveling in the allowed direction of the street. Instead (below), we can specify `network_type='walk'` to build a street network only of paths that walking is allowed on. This also makes every path bi-directional in the directed network, because you can walk in either direction on the sidewalk of a one-way street. The 750m now takes into account those nodes you can reach within 750m while traveling in either direction (even if it's a one-way street)."
    ]
   },
   {
@@ -783,8 +783,8 @@
     "**Note**\n",
     "\n",
     "Running `consolidate_intersections` with `rebuild_graph=True` may yield somewhat (but not very) different intersection counts/densities compared to `rebuild_graph=False`. The difference lies in that the latter just merges buffered node points that overlap, whereas the former checks the topology of the overlapping node buffers before merging them. This prevents topologically remote but spatially proximate nodes from being merged. For example:\n",
-    "- A street intersection may lie directly below a freeway overpass's intersection with an on-ramp. We would not want to merge these together and connnect their edges: they are distinct junctions in the system of roads.\n",
-    "- In a residential neighborhood, a bollarded street may create a dead-end immediately next to an intersection or traffic circle. We would not want to merge this dead-end with the intersection and connect their edges.\n",
+    "- A street intersection may lie directly below a freeway overpass's intersection with an on-ramp. We would not want to merge these together and connect  their edges: they are distinct junctions in the system of roads.\n",
+    "- In a residential neighbourhood, a bollarded street may create a dead-end immediately next to an intersection or traffic circle. We would not want to merge this dead-end with the intersection and connect their edges.\n",
     "\n",
     "These examples illustrate (two-dimensional) geometric proximity, but topological remoteness. Accordingly, in some situations we may expect higher intersection counts when using `rebuild_graph=True` because it is more cautious with merging in these cases. The trade-off is that it has higher time complexity than `rebuild_graph=False`."
    ]
@@ -795,7 +795,7 @@
    "source": [
     "### From OSMNX to NetworkX and Geopandas Classes\n",
     "\n",
-    "Now, we have seen how to use some basic `osmnx` functions to obtain a graph representation of the street network. While this is simple and strightforward, I advise working on the street network represented as `geopandas.GeoDataFrame`s and `networkx` graphs. While at the beginning this may be more tedious, it also gives us much more control, both in terms of visualisation anad analysis depth. Before proceeding, it is important to keep in mind what type of graphs can be modelled through OSMNx and NetworkX, and what that means for the infrastructure we are modelling.\n",
+    "Now, we have seen how to use some basic `osmnx` functions to obtain a graph representation of the street network. While this is simple and straightforward, I advise working on the street network represented as `geopandas.GeoDataFrame`s and `networkx` graphs. While at the beginning this may be more tedious, it also gives us much more control, both in terms of visualisation and analysis depth. Before proceeding, it is important to keep in mind what type of graphs can be modelled through OSMNx and NetworkX, and what that means for the infrastructure we are modelling.\n",
     "\n",
     "<img src=\"../labs_img/graph_types.png\"  width=\"70%\">\n",
     "\n",
@@ -850,7 +850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can visualise major roads on top of the stree network:"
+    "We can visualise major roads on top of the street network:"
    ]
   },
   {
@@ -1226,7 +1226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see an edge's index is a `MultiIndex` given by `u`, `v`, and `key`. `u` and `v` in `networkx` language stand for \"from-node\" and \"to-node\". `key`, on the other hand, indicates whether more than one edge links `u` and `v`. When a pair of `u` and `v` nodes have more then one edge, every other edge will have an incrimental `key` value (the second one 1, the third one 2, etc., very rare that there are more than two edges per pair of nodes). This means that we are dealing with a `MultiGraph` representation of the street network. In other words, we have two street segments connecting the same two nodes in different directions. This could, for example, indicate that the directionality is accounted for (one-way segments). Based on our objective and analysis, such an aspect might be relevant, or not."
+    "As you can see an edge's index is a `MultiIndex` given by `u`, `v`, and `key`. `u` and `v` in `networkx` language stand for \"from-node\" and \"to-node\". `key`, on the other hand, indicates whether more than one edge links `u` and `v`. When a pair of `u` and `v` nodes have more then one edge, every other edge will have an incremental `key` value (the second one 1, the third one 2, etc., very rare that there are more than two edges per pair of nodes). This means that we are dealing with a `MultiGraph` representation of the street network. In other words, we have two street segments connecting the same two nodes in different directions. This could, for example, indicate that the directionality is accounted for (one-way segments). Based on our objective and analysis, such an aspect might be relevant, or not."
    ]
   },
   {
@@ -1273,7 +1273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copying the nodes' attributes (this step is not particularly essential unless we need some information associated with the nodes that we want to use when executing `networkx` methods). Anything else we can rely on the informaiton that is in the `GeoDataFrame`."
+    "Copying the nodes' attributes (this step is not particularly essential unless we need some information associated with the nodes that we want to use when executing `networkx` methods). Anything else we can rely on the information that is in the `GeoDataFrame`."
    ]
   },
   {
@@ -1345,7 +1345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, we copy the attributes with the same approach used before, although, this time, withouth adding the `key` value to the edges. The function `add_edge`of the class the `graph` does not take the `key` argument as there could be only one edge between two nodes."
+    "Then, we copy the attributes with the same approach used before, although, this time, without adding the `key` value to the edges. The function `add_edge` of the class the `graph` does not take the `key` argument as there could be only one edge between two nodes."
    ]
   },
   {
@@ -1437,7 +1437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`shortest_path`, the simplest function for computing shortes paths in `networkx`, returns the list of nodes traversed by the path, including the origin and the destination nodes. We have to transform the sequence of nodes into a sequence of edges to get the corresponding route. "
+    "`shortest_path`, the simplest function for computing shortest paths in `networkx`, returns the list of nodes traversed by the path, including the origin and the destination nodes. We have to transform the sequence of nodes into a sequence of edges to get the corresponding route. "
    ]
   },
   {
@@ -1539,7 +1539,7 @@
     "\n",
     "**Exercise**:\n",
     "\n",
-    "Compute different shortest paths between a node (1) of your choice and a set of 20 other random nodes, for a ciclyst, a driver, and a walker. Visualise and compare the results. In order to differentiate the users, you are expected to consider their travelling speed, in relation to the speed limit of the edges. Consider that, at least for the driver, you may want to do that in a `MultiDiGraph`. \n",
+    "Compute different shortest paths between a node (1) of your choice and a set of 20 other random nodes, for a driver and a walker. Visualise and compare the results. In order to differentiate the users, you are expected to consider their travelling speeds, in relation to the speed limit of the edges. Consider that, at least for the driver, you may want to do that in a `MultiDiGraph`. \n",
     "\n",
     "You can use as case-study one of the graphs used above for Siracusa (Italy) or Sarajevo (Bosnia). Otherwise, just pick a city you like.\n",
     "</div>"
@@ -1575,7 +1575,7 @@
     "From `osmnx` documentation:\n",
     "`custom_filter` (string) – a custom ways filter to be used instead of the network_type presets e.g., `[“power”~”line”]` or `[“highway”~”motorway|trunk”]`. \n",
     "\n",
-    "This method does not work with bus services, since they are not stored in OpenStreetMapData as Links but rather relations. See [here](https://wiki.openstreetmap.org/wiki/Buses) for more info."
+    "This method does not work with bus services, since they are not stored in OpenStreetMap Data as Links but rather relations. See [here](https://wiki.openstreetmap.org/wiki/Buses) for more info."
    ]
   },
   {
