--- a/labs/w01_intro.ipynb
+++ b/labs/w01_intro.ipynb
@@ -20,7 +20,7 @@
    "id": "1d01b201-db45-4a95-af23-41bd47fe6891",
    "metadata": {},
    "source": [
-    "The **Lecture slides** can be found [here](https://slides.com/gfilo/web-mapping-and-geovisualisation-envs456/fullscreen#/2).\n",
+    "The **Lecture slides** can be found [here](https://slides.com/gfilo/web-mapping-and-geovisualisation-envs456/fullscreen).\n",
     "\n",
     "## Part I: Powerful Web Mapping Examples\n",
     "\n",
