--- a/labs/w03_webArch.ipynb
+++ b/labs/w03_webArch.ipynb
@@ -20,7 +20,7 @@
    "id": "f5d2fb34-5313-4670-9468-4acbbbe0bac9",
    "metadata": {},
    "source": [
-    "The **Lecture slides** can be found [here](https://github.com/GDSL-UL/wma/raw/main/lectures/w03.html).\n",
+    "The **Lecture slides** can be found [here](https://github.com/GDSL-UL/wma/raw/main/lectures/w03.pdf).\n",
     "\n",
     "This **lab**'s notebook can be downloaded from [here](https://github.com/GDSL-UL/wma/blob/main/labs/w03_webArch.ipynb)."
    ]
