--- a/general/assessments.qmd
+++ b/general/assessments.qmd
@@ -1,41 +1,53 @@
+
 # Assessments {.unnumbered}
 
 ## Assignment I
 
--   **Title:** Exporing APIs in Python.
+-   **Title:** Exporing APIs and Interactive Maps in Python.
 -   **Type:** Coursework.
 -   **Due: Thursday March 7th, Week 6**.
 -   50% of the final mark.
 -   Electronic submission only.
 
-In this assessment, you will have the opportunity to ex pore different solrces and coumine them in a map that can be explored interactively throbgh a web browser. **The assignuent aims to evaluate your knowledge and aptitude in the following areas**:
+In this assessment, you will have the opportunity to explore different sources and combine them in a map that can be explored interactively throbh a web browser. **The assignment aims to evaluate your knowledge and aptitude in the following areas**:
 
--   Understanding of core "backend" concepts in web mapping such as tilesetsm,client-server architecture, and APIs.
+-   Understanding of core "backend" concepts in web mapping such as tilesets, client-server architecture, and APIs.
 -   Ability to use the web as a resource for original data.
--   Design skills to  resent effectively a diverse set of geospatial data in a web map.
+-   Design skills to represent effectively a diverse set of geospatial data in a web map.
 
 ### Design, data pan assemblage.
 
-This assignment requires you to source data from the web in different formats, assemble them, and ddoument the process. To be successful, you will need to demonstrate your understanding not only of the technical aspects involved in the process, but also of the conceptual notions that underpin them. Below are described the required components for your submission.
+This assignment requires you to source data from the web in different formats, assemble them, and document the process. To be successful, you will need to demonstrate your understanding not only of the technical aspects involved in the process, but also of the conceptual notions that underpin them. Below are described the required components for your submission.
 
-1. **Data**. Draft a list of potential spatial datasets that you can access by developing a simple API in Python. The data should contain spatial information or should be easy to link to other existing spatial data sources (e.g. combining different datasets).  While you can make use of available datasets, you are required to demonstrate the ability to develop your own API. Once you know which datasets you are interested and able to obtain, think about what data/variables deserve consideration and how they could be presented.
-2. **Design**.  Start by designing a map that represents the spatial units of the dataset (e.g. buildings, train stations, cities, etc.). Use `folium` to incorporate initial basic interactivity. At this point, check on your ideas with the module teachers, who will be able to assess whether potential problems may arise from your choices. Move to the incorporation of data, both for categorical (if appropriate) and numerical variables, and consider how to represent it through the map. This stage should draw some inspiration from the first weeks of the course, where we looked for examples of web maps and spent time discussing what made them good and why.
-3. **Assemblage**. Embellish your map, consider the usage of widgets for facilitating the exploration of the dataset. Play and choose one of the available tilesets. Conisder creating your own in `Mapbox` (this would be reflected in the final grade).  Pay attention to the design aspects involved in this step too. For example, what is the extent of your map (not necessarily the extent of each of your data)? What are the zoom levels your map will allow? Do you have the same "map" for every zoom level? These are questions you will have to ask (and answer!) yourself to complete this stage successfully.
+1. **Data**. Draft a list of potential spatial datasets that you can access by developing a simple API in Python. The data should contain spatial information or should be easy to link to other existing spatial data sources (e.g. combining different datasets).  While you can make use of available datasets, **you are required to demonstrate the ability to develop your own API request**. Once you know which datasets you are interested and able to obtain, think about what data/variables deserve consideration and how they could be presented.
+2. **Design**.  Start by designing a map that represents the spatial units of the dataset (e.g. buildings, train stations, cities, etc.). Use `folium` to incorporate initial basic interactivity. At this point, check on your ideas with the module teachers, who will be able to assess whether potential problems may arise from your choices. Move to the incorporation of data, both for categorical (if appropriate) and numerical variables, and consider how to represent it through the map. This stage should draw some inspiration from the first weeks of the course, where we looked at examples of web maps and spent time discussing what made them good and why.
+3. **Assemblage**. Embellish your map, consider the usage of widgets for facilitating the exploration of the dataset. Play and choose one of the available tilesets. Conisder creating your own in `Mapbox`.  Pay attention to the design aspects involved in this step too. For example, what is the extent of your map (not necessarily the extent of each of your data)? What are the zoom levels your map will allow? Do you have the same "map" for every zoom level? These are questions you will have to ask (and answer!) yourself to complete this stage successfully.
 
 Once you have developed your API and created the interactive map, you will need to present it. An important aspect of this stage is that it is not really the code/map you need to present, but the *process* of creation you have followed and the *design* choices you have made that should go into the text. Additionally, you will need to provide evidence that you understand the concepts behind some of the technologies you have used.
 
-### Submission
-You will submit through Canvas a `.html` file obtained from a Python  `.ipynb` Jupyter Notebook file. To do so, in your `.ipynb` file, follow these steps: `File` --> `Save and Export as..` --> `HTML`. Prior to this step, the notebook needs to be rendered (i.e. all the cells should be executed). Other file formats will not be accepted.  Besides the necessary code, the report should include up to **1,000** words and the following:
+### In a Nutshell, Assignment 1 should contain:
 
--   Map brief:
+**Code**
 
-    -   About 250 words introducing the map. This should cover what it tries to represent (what is it about?) and the choices you have made along the way to take that idea into fruition.
+- Introductory Static Maps (2 to 3), presenting the topic and the geographic context.
+- An API request written by your own.
+- All the necessary steps for making your API work and for data cleaning/exploration.
+- An interactive final map (and intermediate ones, if necessary, to present the final development). This should be fed with data obtained through the API request.
+
+Up to **1,000 words** - distributed across the notebook, and included as Markdown Cells - referring to:
+
+**Map brief:**
+
+    -   About 250 words introducing the map(s). This should cover what it tries to represent (what is it about?) and the choices you have made along the way to take that idea into fruition.
     -   About 250 words discussing and motivating the sources of data you have used. Here you should engage not only with what data you are using but why and what they bring to the map. Everything should be in the map for a reason, make sure to spell it out clearly.
 
--   Conceptual background:
+**Conceptual background:**
 
-    -   About 250 words with your description of what an API is, how it works and how it has made your map possible.
-    -   About 250 words with your description of how tile-based maps work.
+    -   About 250 words with your description of what your API is, how it works and how it has made your map possible.
+    -   About 250 words with your description of how your final interactive map works, its components and your design ideas.
+
+### Submission
+You will submit through Canvas a `.html` file obtained from a Python  `.ipynb` Jupyter Notebook file. To do so, in your `.ipynb` file, follow these steps: `File` --> `Save and Export as..` --> `HTML`. Prior to this step, the notebook needs to be rendered (i.e. all the cells should be executed). Other file formats will not be accepted. 
 
 ### Evaulation
 The assignment will be evaluated based on four main pillars, on which you will have to be successful to achieve a good mark:
