--- a/labs/w05_dataArch.ipynb
+++ b/labs/w05_dataArch.ipynb
@@ -20,7 +20,7 @@
    "id": "dbd99480-eafa-45a2-877d-7e6eab63185f",
    "metadata": {},
    "source": [
-    "The **Lecture slides** can be found [here](https://github.com/GDSL-UL/wma/raw/main/lectures/w05.html).\n",
+    "The **Lecture slides** can be found [here](https://github.com/GDSL-UL/wma/raw/main/lectures/w05.pdf).\n",
     "\n",
     "This **lab**'s notebook can be downloaded from [here](https://github.com/GDSL-UL/wma/blob/main/labs/w05_dataArch.ipynb)."
    ]
