--- a/index.tex
+++ b/index.tex
@@ -196,7 +196,7 @@
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, enhanced, interior hidden, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, sharp corners, frame hidden]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, enhanced, breakable, sharp corners, boxrule=0pt, interior hidden, borderline west={3pt}{0pt}{shadecolor}]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -13466,7 +13466,7 @@ it.
 \NormalTok{df }\OperatorTok{=}\NormalTok{ df.dropna(subset}\OperatorTok{=}\NormalTok{[}\StringTok{\textquotesingle{}latitude\textquotesingle{}}\NormalTok{, }\StringTok{\textquotesingle{}longitude\textquotesingle{}}\NormalTok{])}
 \CommentTok{\# Widget to select a country}
 \NormalTok{countries }\OperatorTok{=} \BuiltInTok{sorted}\NormalTok{(df[}\StringTok{\textquotesingle{}country\_txt\textquotesingle{}}\NormalTok{].unique().tolist())}
-\NormalTok{country\_selector }\OperatorTok{=}\NormalTok{ pn.widgets.Select(name}\OperatorTok{=}\StringTok{\textquotesingle{}Country\textquotesingle{}}\NormalTok{, options}\OperatorTok{=}\NormalTok{csountries)}
+\NormalTok{country\_selector }\OperatorTok{=}\NormalTok{ pn.widgets.Select(name}\OperatorTok{=}\StringTok{\textquotesingle{}Country\textquotesingle{}}\NormalTok{, options}\OperatorTok{=}\NormalTok{countries)}
 \end{Highlighting}
 \end{Shaded}
 
